--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>  
+        <h1>Forelesningsslides</h1>
+        <a href="01 - Introduksjon.pdf">01 - Introduksjon.pdf</a>
     </main>
     <script src="index.js"></script>
   </body>
