Added links to remaining pdfs

--- a/index.html
+++ b/index.html
@@ -10,8 +10,29 @@
   </head>
   <body>
     <main>
-        <h1>Forelesningsslides</h1>
+        <h1>Forelesningsslides Software Engineering 2024</h1>
         <a href="01 - Introduksjon.pdf">01 - Introduksjon.pdf</a>
+        <a href="02 - Prosessmodeller.pdf">02 - Prosessmodeller.pdf</a>
+        <a href="03 - Krav.pdf">03 - Krav.pdf</a>
+        <a href="04 - Estimering.pdf">04 - Estimering.pdf</a>
+        <a href="05 - Agile.pdf">05 - Agile.pdf</a>
+        <a href="06 - Agile Workshop.pdf">06 - Agile Workshop.pdf</a>
+        <a href="07 - Versjonskontroll - Github.pdf">07 - Versjonskontroll - Github.pdf</a>
+        <a href="08 - Versjonskontroll - Branches og Merging.pdf">08 - Versjonskontroll - Branches og Merging.pdf</a>
+        <a href="09 - Testing og Enhetstesting.pdf">09 - Testing og Enhetstesting.pdf</a>
+        <a href="10 - Test Doubles.pdf">10 - Test Doubles.pdf</a>
+        <a href="11 - Modellering.pdf">11 - Modellering.pdf</a>
+        <a href="12 - Test Driven Development.pdf">12 - Test Driven Development.pdf</a>
+        <a href="13 - Mer om testing.pdf">13 - Mer om testing.pdf</a>
+        <a href="14 (1) - Avhengigheter.pdf">14 (1) - Avhengigheter.pdf</a>
+        <a href="14 (2) - Arkitektur og løst koblet kode.pdf">14 (2) - Arkitektur og løst koblet kode.pdf</a>
+        <a href="15 - Arkitektur og løst koblet kode.pdf">15 - Arkitektur og løst koblet kode.pdf</a>
+        <a href="16 - Heksagonal Arkitektur Eksempel.pdf">16 - Heksagonal Arkitektur Eksempel.pdf</a>
+        <a href="17 - Continuous Integration og Continuous Deployment.pdf">17 - Continuous Integration og Continuous Deployment.pdf</a>
+        <a href="18 - Hvordan skrive god kode.pdf">18 - Hvordan skrive god kode.pdf</a>
+        <a href="19 - Software Engineering H2024 - Containerization.pdf">19 - Software Engineering H2024 - Containerization.pdf</a>
+        <a href="20 - Software Engineering H2024 - Orchestration v2.pdf">20 - Software Engineering H2024 - Orchestration v2.pdf</a>
+        <a href="21 - Eksamensforelesning.pdf">21 - Eksamensforelesning.pdf</a>
     </main>
     <script src="index.js"></script>
   </body>
